name:                battleship
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/battleship#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
                     , mtl
                     , transformers
                     , lens
                     , safe
                     , MonadRandom
  default-language:    Haskell2010
  GHC-Options:         -Wall -Wno-name-shadowing

executable battleship-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , battleship
  default-language:    Haskell2010
  GHC-Options:         -Wall -Wno-name-shadowing

test-suite battleship-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , battleship
                     , MonadRandom
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , hspec-expectations
                     , QuickCheck >= 2.10.1
                     , containers
                     , mtl
                     , safe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  GHC-Options:         -Wall -Wno-name-shadowing

source-repository head
  type:     git
  location: https://github.com/githubuser/battleship
